# elastic_loader

./: README.md  elastic_lib.py  file_lib.py  main.py  model.py  pyproject.toml  task_lib.py
test_data/: injest.task  injest1.task
